[package]
name = "pixelflut-cli"

authors = ["NotNite"]
description = "A pixelflut client in Rust"
edition = "2021"
version = "0.1.0"

[dependencies]
clap = {version = "3.1.18", features = ["derive"]}
image = "0.24.2"
rand = "0.8.5"
pixelflut = {path = "../../crates/pixelflut"}
tokio = { version = "1.19.0", features = ["macros", "rt", "rt-multi-thread", "time"] }
futures = "0.3.21"
